<resources>
    <string name="app_name">爱阅读</string>
    <string name="downloadmange">下载管理</string>
    <string name="setting">设置</string>
    <string name="update">更新</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入关键词</string>
    <string name="change">换一批</string>
    <string name="clear_history">清空历史记录</string>
    <string name="nobook">当前无任何书籍，点击添加</string>
    <string name="书名">bookname</string>
    <string name="天籁小说">source</string>
    <string name="简介">book desc</string>
    <string name="作者">author</string>
    <string name="类型">type</string>
    <string name="content">【目录】</string>
    <string name="daoxu">倒序</string>
    <string name="shangyizhang">上一章</string>
    <string name="xiayizhang">下一章</string>
    <string name="huancun">缓存</string>
    <string name="yejian">夜间</string>
    <string name="mulu">目录</string>
    <string name="xitong">系统</string>
    <string name="Ajian">A-</string>
    <string name="_20">20</string>
    <string name="Ajia">A+</string>
    <string name="fanti">繁</string>
    <string name="ziti">字体</string>
    <string name="slow">慢</string>
    <string name="quick">快</string>
    <string name="zidonggunping">自动滚屏</string>
    <string name="refresh_again">加载失败，点击重新加载</string>
    <string name="day">日间</string>
    <string name="night">夜间</string>
    <string name="chapter">chapter</string>
    <string name="positive_sort">正序</string>
    <string name="inverted_sort">倒序</string>
    <string name="history">history</string>
    <string name="add_book">加入书架</string>
    <string name="bookname">bookname</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="book_souce">书源</string>
    <string name="newchapter">最新章节</string>
    <string name="copyright">版权说明</string>
    <string name="disclaimer">免责声明</string>
    <string name="first">1、 爱读书是一款提供网络文学搜索的工具，为广大网络文学爱好者提供一种方便、快捷舒适的试读体验。</string>
    <string name="second">2、 当您搜索一本书的时，爱读书会将该书的书名以关键词的形式提交到各个第三方网络文学网站。各第三方网站返回的内容与爱读书无关，爱读书对其概不负责，亦不承担任何法律责任。任何通过使用爱读书而链接到的第三方网页均系他人制作或提供，您可能从第三方网页上获得其他服务，爱读书对其合法性概不负责，亦不承担任何法律责任。第三方搜索引擎结果根据您提交的书名自动搜索获得并提供试读，不代表爱读书赞成或被搜索链接到的第三方网页上的内容或立场。您应该对使用搜索引擎的结果自行承担风险。</string>
    <string name="third">3、 爱读书致力于最大程度地减少网络文学阅读者在自行搜寻过程中的无意义的时间浪费，通过专业搜索展示不同网站中网络文学的最新章节。爱读书在为广大小说爱好者提供方便、快捷舒适的试读体验的同时，也使优秀网络文学得以迅速、更广泛的传播，从而达到了在一定程度促进网络文学充分繁荣发展之目的。爱读书鼓励广大小说爱好者通爱读书发现优秀网络小说及其提供商，并建议阅读正版图书。任何单位或个人认为通过爱读书搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权，应该及时向爱读书提出书面权力通知，并提供身份证明、权属证明及详细侵权情况证明。爱读书在收到上述法律文件后，将会依法尽快断开相关链接内容。</string>
</resources>