<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/rl_title_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/sys_dialog_setting_bg">

        <LinearLayout
            android:id="@+id/ll_title_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="5dip"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            tools:ignore="RelativeOverlap,RtlSymmetry">

            <TextView
                android:id="@+id/tv_add_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/sys_dialog_setting_bg"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/tv_last_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shangyizhang"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/sb_read_chapter_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:maxHeight="1dp"
                android:minHeight="1dp"
                android:progressDrawable="@drawable/seekbar_bg"
                android:thumb="@mipmap/thumb"/>

            <TextView
                android:id="@+id/tv_next_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiayizhang"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="@color/sys_dialog_setting_line"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/ll_chapter_list"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/t3"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mulu"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_download_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/download"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_download_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/huancun"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_night_and_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_night_and_day"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ao"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_night_and_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/yejian"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/t6"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/setting"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




</RelativeLayout>