<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlCommonTitle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:menu="@menu/top_app_bar"
            app:popupTheme="@style/OverflowMenuStyle"
            app:title="@string/app_name" />
        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablayout"
            app:tabBackground="@color/gray"
            app:tabIndicatorColor="#FFF"
            app:tabIconTint="@color/white"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_baseline_bookmark_border_24"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_bookclassify"/>
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/rl_edit_titile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_edit_finish"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:text="@string/complete"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>